Airflow_Installation/logs/dag_id=data_engineering_jobs_dags_v3/run_id=scheduled__2023-07-04T000000+0000/task_id=write_to_postgres/attempt=1.log
[2023-07-29T15:29:34.820+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres scheduled__2023-07-04T00:00:00+00:00 [queued]>
[2023-07-29T15:29:35.341+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres scheduled__2023-07-04T00:00:00+00:00 [queued]>
[2023-07-29T15:29:35.356+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T15:29:35.382+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2023-07-29T15:29:35.384+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T15:29:36.260+0000] {taskinstance.py:1304} INFO - Executing <Task(PythonOperator): write_to_postgres> on 2023-07-04 00:00:00+00:00
[2023-07-29T15:29:36.515+0000] {standard_task_runner.py:55} INFO - Started process 13759 to run task
[2023-07-29T15:29:36.652+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'data_engineering_jobs_dags_v3', 'write_to_postgres', 'scheduled__2023-07-04T00:00:00+00:00', '--job-id', '2823', '--raw', '--subdir', 'DAGS_FOLDER/load_data_v3.py', '--cfg-path', '/tmp/tmp5x7r53hy']
[2023-07-29T15:29:36.694+0000] {standard_task_runner.py:83} INFO - Job 2823: Subtask write_to_postgres
[2023-07-29T15:29:39.543+0000] {task_command.py:389} INFO - Running <TaskInstance: data_engineering_jobs_dags_v3.write_to_postgres scheduled__2023-07-04T00:00:00+00:00 [running]> on host f1ea17bde741
[2023-07-29T15:29:43.566+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=data_engineering_jobs_dags_v3
AIRFLOW_CTX_TASK_ID=write_to_postgres
AIRFLOW_CTX_EXECUTION_DATE=2023-07-04T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-07-04T00:00:00+00:00
[2023-07-29T15:29:44.210+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T15:29:44.507+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/load_data_v3.py", line 74, in write_to_postgres
    execute_values(cursor, insert_statement, [tuple(x) for x in df.to_records(index=False)])
  File "/home/airflow/.local/lib/python3.7/site-packages/psycopg2/extras.py", line 1299, in execute_values
    cur.execute(b''.join(parts))
psycopg2.errors.SyntaxError: syntax error at or near "Title"
LINE 1: ...in,salary_max,description,label,tag,longitude,Job Title,id,s...
                                                             ^

[2023-07-29T15:29:45.107+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=data_engineering_jobs_dags_v3, task_id=write_to_postgres, execution_date=20230704T000000, start_date=20230729T152934, end_date=20230729T152945
[2023-07-29T15:29:45.798+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 2823 for task write_to_postgres (syntax error at or near "Title"
LINE 1: ...in,salary_max,description,label,tag,longitude,Job Title,id,s...
                                                             ^
; 13759)
[2023-07-29T15:29:46.164+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T15:29:47.592+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
